--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
 
 		// google login failure report
 		function onFailure(error){
-			alert(error);
+			alert(JSON.stringify( error ) );
 		};
 		
 		
