--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
 						<div class="btn_field">
 							<button type="button" class="btn btn-primary" onclick="send_new_part()" >新增</button>
 						</div>
+						<label class="btn btn-info">
+							<input id="upload_img" style="display:none;" type="file">
+							<i class="fa fa-photo"></i> 上傳圖片
+						</label>
 					</div>
 				</div>
 				<div id="menu2" class="tab-pane fade">
