--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
-        <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-        <script src="http://code.jquery.com/ui/1.11.3/jquery-ui.js"></script>
-    </head>
-    <body>
-        <script>
-            function PreviewText() {
-            var oFReader = new FileReader();
-            oFReader.readAsDataURL(document.getElementById("uploadText").files[0]);
-            oFReader.onload = function (oFREvent) {
-                document.getElementById("uploadTextValue").value = oFREvent.target.result; 
-                document.getElementById("obj").data = oFREvent.target.result;
-            };
-        };
-        jQuery(document).ready(function(){
-            $('#viewSource').click(function ()
-            {
-                var text = $('#uploadTextValue').val();
-                alert(text);
-                //here ajax
-            });
+<head>
+    <title></title>
+    <meta charset="utf-8" />
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {            
+                $.ajax({`enter code here`
+                    url: "TextFile.txt",
+                    dataType: "text",
+                    success: function (data) {                 
+                            var text = $('#newCheckText').val();
+                            var str = data;
+                            var str_array = str.split('\n');
+                            for (var i = 0; i < str_array.length; i++) {
+                                // Trim the excess whitespace.
+                                str_array[i] = str_array[i].replace(/^\s*/, "").replace(/\s*$/, "");
+                                // Add additional code here, such as:
+                                alert(str_array[i]);
+                                $('#checkboxes').append('<input type="checkbox"  class="checkBoxClass" /> ' + str_array[i] + '<br />');
+                            }
+                    }                   
+                });
+                $("#ckbCheckAll").click(function () {
+                    $(".checkBoxClass").prop('checked', $(this).prop('checked'));
+                });
         });
-        </script>
-        <object width="100%" height="400" data="" id="obj"></object>
-        <div>
-            <input type="hidden" id="uploadTextValue" name="uploadTextValue" value="" />
-            <input id="uploadText" style="width:120px" type="file" size="10"  onchange="PreviewText();" />
-        </div>
-        <a href="#" id="viewSource">Source file</a>
-    </body>
+    </script>
+</head>
+<body>
+    <div id="checkboxes">
+        <input type="checkbox" id="ckbCheckAll" class="checkBoxClass"/> Select All<br />        
+    </div>
+</body>
 </html>
