--- a/index.html
+++ b/index.html
@@ -688,6 +688,7 @@
 			}
 			var form_cnt = document.getElementById( form_id );
 			form_cnt.reset();
+			product_table.bootstrapTable('removeAll');
 		}
 		
 		// send a revise product data to database
