--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 		<!-- Bootstrap core CSS -->
 		<link rel="stylesheet" href="/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/css/font-awesome.min.css">
-		<link rel="stylesheet" href="/css/bootstrap-table.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/bootstrap-table.min.css">
 		<link rel="stylesheet" href="/css/style.css">
 		<!-- Bootstrap core JavaScript -->
 		<script src="/scripts/jquery.min.js"></script>
 		<script src="/scripts/bootstrap.min.js"></script>
-		<script src="/scripts/bootstrap-table.min.js"></script>
-		<script src="/scripts/bootstrap-table-multiple-search.min.js"></script>
-		<script src="/scripts/bootstrap-table-zh-TW.js"></script>
-		<script src="/scripts/bootstrap-table-zh-TW.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/bootstrap-table.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/extensions/multiple-search/bootstrap-table-multiple-search.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/locale/bootstrap-table-zh-TW.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/locale/bootstrap-table-zh-TW.min.js"></script>
 		<script src="/scripts/bootstrap-table-export.js"></script>
 	</head>
 	
