--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 				<div id="home" class="tab-pane fade in active">
 					<div id="toolbar">
 						<div class="col-auto">
-							<button type="button" class="btn btn-primary" onclick="receive_db_info()" >更新數據</button>
+							<button type="button" class="btn btn-primary mb-2" onclick="receive_db_info()" >更新數據</button>
 						</div>
 						<div class="col-auto">
-							<select class="form-control">
+							<select class="form-control mb-2">
 								<option value="all">Export All</option>
 								<option value="selected">Export Selected</option>
 							</select>
