--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 						data-id-field="index"
 						data-unique-id="index"
 						data-show-columns="true"
+						data-show-export="true"
 						data-toolbar="#toolbar"
 						data-page-number="1">
 						<thead>
