--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/locale/bootstrap-table-zh-TW.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/locale/bootstrap-table-zh-TW.min.js"></script>
 		<script src="/scripts/bootstrap-table-export.js"></script>
+		<script src="/scripts/tableExport.js"></script>
+		
 	</head>
 	
 	
