--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/locale/bootstrap-table-zh-TW.min.js"></script>
 		<script src="/scripts/bootstrap-table-export.js"></script>
 		<script src="/scripts/tableExport.js"></script>
-		
+		<script src="/scripts/ga.js"></script>
 	</head>
-	
-	
-	
 	<body>
 		<div class="load_modal"></div>
 		<div class="login_container">
@@ -66,8 +63,7 @@
 						data-unique-id="index"
 						data-show-columns="true"
 						data-show-export="true"
-						data-toolbar="#toolbar"
-						data-page-number="1">
+						data-toolbar="#toolbar">
 						<thead>
 							<tr>
 								<th data-field="index">項次</th>
