--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
 				<div id="menu6" class="tab-pane fade">
 					<div id="record_toolbar">
 						<div class="col-auto">
-							<button type="button" class="btn btn-primary" onclick="delete_record()" >刪除</button>
-							<button type="button" class="btn btn-primary" onclick="receive_record()" >更新數據</button>
+							<!--button type="button" class="btn btn-primary" onclick="delete_record()" >刪除</button-->
+							<!--button type="button" class="btn btn-primary" onclick="receive_record()" >更新數據</button-->
 						</div>
 					</div>
 					<table id="record_table"
@@ -209,7 +209,7 @@
 						data-id-field="index"
 						data-unique-id="index"
 						data-show-columns="true"
-						data-toolbar="#toolbar"
+						data-toolbar="#record_toolbar"
 						data-page-number="1">
 						<thead>
 							<tr>
