--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
 				<div id="menu6" class="tab-pane fade">
 					<div id="record_toolbar">
 						<div class="col-auto">
-							<!--button type="button" class="btn btn-primary" onclick="delete_record()" >刪除</button-->
-							<!--button type="button" class="btn btn-primary" onclick="receive_record()" >更新數據</button-->
+							<button type="button" class="btn btn-primary" onclick="delete_record()" >刪除</button>
+							<button type="button" class="btn btn-primary" onclick="receive_record()" >更新數據</button>
 						</div>
 					</div>
 					<table id="record_table"
