--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
 				<li><a data-toggle="tab" href="#menu4">入庫&領用</a></li>
 				<li><a data-toggle="tab" href="#menu5">BOM</a></li>
 				<li><a data-toggle="tab" href="#menu6">紀錄</a></li>
+				<li><a data-toggle="tab" href="#menu7">事件</a></li>
 			</ul>
 			<div class="tab-content">
 				<div id="home" class="tab-pane fade in active">
 					<div id="toolbar">
 						<div class="col-auto">
-							<button type="button" class="btn btn-primary mb-2" onclick="receive_db_info()" >更新數據</button>
+							<button type="button" class="btn btn-primary" onclick="receive_db_info()" >更新數據</button>
 						</div>
 					</div>
 					<table id="part_table"
@@ -235,11 +236,6 @@
 		var part_list_obj = $("#part_list");
 		var part_list_options = "";
 		var bom_node_array = new Array();
-		// loading event
-		product_table.bootstrapTable('destroy').bootstrapTable({
-			exportDataType: "all"
-		});
-		
 		
 		$(document).on({
 			ajaxStart: function() { body.addClass("loading"); },
@@ -286,6 +282,9 @@
 						ele_id = "menu6";
 						receive_record();
 						break;
+					case "事件":
+						product_table = $("#event_table");
+						ele_id = "menu7";
 					default:
 				}
 			});
@@ -860,6 +859,9 @@
 					success: function(response){
 						switch( data.state ){
 							case "get_all_data":
+								product_table.bootstrapTable('destroy').bootstrapTable({
+									exportDataType: "all"
+								});
 							case "get_record_data":
 								product_table.bootstrapTable('removeAll');
 								product_table.bootstrapTable('load', response);
