--- a/index.html
+++ b/index.html
@@ -226,6 +226,40 @@
 						</thead>
 					</table>
 				</div>
+				<div id="menu7" class="tab-pane fade">
+					<div id="event_toolbar">
+						<div class="col-auto">
+							<button type="button" class="btn btn-primary" onclick="delete_event()" >刪除</button>
+							<button type="button" class="btn btn-primary" onclick="receive_event()" >更新數據</button>
+						</div>
+					</div>
+					<table id="event_table"
+						data-toggle="table"
+						data-side-pagination="client"
+						data-pagination="true"
+						data-page-list="[5, 10, 50, 100]"
+						data-search="true"
+						data-height="525"
+						data-id-field="index"
+						data-unique-id="index"
+						data-detail-view="true"
+						data-detail-formatter="detailFormatter"
+						data-show-columns="true"
+						data-toolbar="#event_toolbar"
+						data-page-number="1">
+						<thead>
+							<tr>
+								<th data-field="index">項次</th>
+								<th data-field="timestamp">時間</th>
+								<th data-field="number">品號</th>
+								<th data-field="action">行為</th>
+								<th data-field="quantity">數量</th>
+								<th data-field="goal">目的</th>
+								<th data-field="location">位置</th>
+							</tr>
+						</thead>
+					</table>
+				</div>
 			</div>
 		</div>
     <script language="JavaScript">
@@ -289,6 +323,44 @@
 				}
 			});
 		});
+		
+		
+		
+		var data = [
+		{
+			"index": "1",
+			"timestamp": "2018/8/7",
+			"number": "bootstrap-table",
+			"action": "526",
+			"quantity": "122",
+			"goal": "An extended Bootstrap table with radio",
+			"location": "test"
+		},
+		{
+			"index": "1",
+			"timestamp": "2018/8/7",
+			"number": "bootstrap-table",
+			"action": "288",
+			"quantity": "333",
+			"goal": "A jQuery plugin to select multiple",
+			"location": "test"
+		}];
+		
+		$(function () {
+			$('#event_table').bootstrapTable({
+				data: data
+			});
+		});
+		
+		
+		function detailFormatter(index, row) {
+			var html = [];
+			$.each(row, function (key, value) {
+				html.push('<p><b>' + key + ':</b> ' + value + '</p>');
+			});
+			return html.join('');
+		}
+		
 		
 		// quantity change button response
 		function quan_change_btn( currdata ){
