--- a/index.html
+++ b/index.html
@@ -325,6 +325,13 @@
 			});
 		});
 		
+		function detailFormatter(index, row) {
+			var html = [];
+			$.each(row, function (key, value) {
+				html.push('<p><b>' + key + ':</b> ' + value + '</p>');
+			});
+			return html.join('');
+		}
 		
 		
 		// quantity change button response
