--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
 						data-detail-formatter="detailFormatter"
 						data-show-columns="true"
 						data-toolbar="#event_toolbar"
+						data-card-view="true"
 						data-page-number="1">
 						<thead>
 							<tr>
