--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 			return [
 				'<div class="card card-bs">',
 					'<div class="head">',
-					'<span class="number">' + row.number + '</span>',
+					'<span class="name">' + row.number + '</span>',
 					'<span class="stars">★ ' + row.index + '</span>',
 					'<span class="forks">* ' + row.timestamp + '</span>',
 					'</div>',
