--- a/index.html
+++ b/index.html
@@ -327,6 +327,8 @@
 		});
 		
 		function customCardView(row) {
+			alert(row);
+			alert(row.number);
 			return [
 				'<div class="card card-bs">',
 					'<div class="head">',
