--- a/index.html
+++ b/index.html
@@ -328,12 +328,10 @@
 		});
 		
 		function customCardView(row) {
-			alert(row);
-			alert(row.number);
 			return [
 				'<div class="card card-bs">',
 					'<div class="head">',
-						'<span class="name">' + row.number + '</span>',
+						'<a class="name">' + row.number + '</a>',
 						'<span class="stars">★ ' + row.index + '</span>',
 						'<span class="forks">* ' + row.timestamp + '</span>',
 					'</div>',
