--- a/index.html
+++ b/index.html
@@ -331,8 +331,7 @@
 			return [
 				'<div class="card card-bs">',
 					'<div class="head">',
-						
-						'<a class="name" onclick="event_get_serial_num( 'row.number' )">' + row.number + '</a>',
+						'<a class="name" onclick="event_get_serial_num(' + row.number + ')">' + row.number + '</a>',
 						'<span class="stars">★ ' + row.index + '</span>',
 						'<span class="forks">* ' + row.timestamp + '</span>',
 					'</div>',
