--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 			return [
 				'<div class="card card-bs">',
 					'<div class="head">',
-						'<span class="name">' + row.number + '</span>',
+						'<a href="制令" class="name">' + row.number + '</span>',
 						'<span class="stars">★ ' + row.index + '</span>',
 						'<span class="forks">* ' + row.timestamp + '</span>',
 					'</div>',
@@ -340,10 +340,7 @@
 				'</div>'
 			].join('');
 		}
-		
-		function event_get_serial_num(row) {
-			alert(row);
-		}
+
 
 		
 		// quantity change button response
