--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 			return [
 				'<div class="card card-bs">',
 					'<div class="head">',
-						'<a href="Order?filename=' + row.number + '" class="name">' + row.number + '</span>',
+						'<a href="Order" class="name">' + row.number + '</span>',
 						'<span class="stars">★ ' + row.index + '</span>',
 						'<span class="forks">* ' + row.timestamp + '</span>',
 					'</div>',
