--- a/index.html
+++ b/index.html
@@ -331,13 +331,18 @@
 			return [
 				'<div class="card card-bs">',
 					'<div class="head">',
-						'<a href="Order?filename=' + row.number + '" class="name">' + row.number + '</span>',
+						'<a onclick="event_get_serial_num(' + row.number + ')" class="name">' + row.number + '</span>',
 						'<span class="stars">★ ' + row.index + '</span>',
 						'<span class="forks">* ' + row.timestamp + '</span>',
 					'</div>',
 					'<div class="body">' + row.goal + '</div>',
 				'</div>'
 			].join('');
+		}
+		
+		function event_get_serial_num(row){
+			alert(row);
+			
 		}
 
 
