--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 			return [
 				'<div class="card card-bs">',
 					'<div class="head">',
-						'<a onclick="event_get_serial_num(' + row.number + ')" class="name">' + row.number + '</span>',
+						'<a onclick="event_get_serial_num(' + row.number + ')" class="name">' + row.number + '</a>',
 						'<span class="stars">★ ' + row.index + '</span>',
 						'<span class="forks">* ' + row.timestamp + '</span>',
 					'</div>',
