--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
 						data-id-field="index"
 						data-unique-id="index"
 						data-show-columns="true"
-						data-card-view="true"
-						data-card-formatter="customCardView"
+						data-detail-view="true"
+						data-detail-formatter="detailFormatter"
 						data-page-number="1">
 						<thead>
 							<tr>
@@ -327,24 +327,13 @@
 			});
 		});
 		
-		function customCardView(row) {
-			return [
-				'<div class="card card-bs">',
-					'<div class="head">',
-						'<a onclick="event_get_serial_num(' + row.number + ')" class="name">' + row.number + '</a>',
-						'<span class="stars">★ ' + row.index + '</span>',
-						'<span class="forks">* ' + row.timestamp + '</span>',
-					'</div>',
-					'<div class="body">' + row.goal + '</div>',
-				'</div>'
-			].join('');
+		function detailFormatter(index, row) {
+			var html = [];
+			$.each(row, function (key, value) {
+				html.push('<p><b>' + key + ':</b> ' + value + '</p>');
+			});
+			return html.join('');
 		}
-		
-		function event_get_serial_num(row){
-			alert(row);
-			
-		}
-
 
 		
 		// quantity change button response
