--- a/index.html
+++ b/index.html
@@ -231,8 +231,9 @@
 				<div id="menu7" class="tab-pane fade">
 					<div id="event_toolbar">
 						<div class="col-auto">
-							<button type="button" class="btn btn-primary" onclick="delete_event()" >刪除</button>
-							<button type="button" class="btn btn-primary" onclick="receive_event()" >更新數據</button>
+							<button type="button" class="btn btn-primary" onclick="del_make_order()" >刪除</button>
+							<button type="button" class="btn btn-primary" onclick="add_make_order()" >新增制令</button>
+							<button type="button" class="btn btn-primary" onclick="upd_make_order()" >更新數據</button>
 						</div>
 					</div>
 					<table id="event_table"
@@ -251,7 +252,8 @@
 						data-page-number="1">
 						<thead>
 							<tr>
-								<th data-field="index">項次</th>
+								<th data-field="state" data-checkbox="true"></th>
+								<th data-formatter="index_response">項次</th>
 								<th data-field="timestamp">時間</th>
 								<th data-field="number">品號</th>
 								<th data-field="action">行為</th>
@@ -326,6 +328,10 @@
 				}
 			});
 		});
+		
+		function index_response( val, row, ind ){
+			return ind;
+		}
 		
 		function detailFormatter(index, row) {
 			var html = [];
