--- a/index.html
+++ b/index.html
@@ -340,7 +340,14 @@
 			});
 			return html.join('');
 		}
-
+		
+		function del_make_order(){
+			product_table.hide();
+		}
+		
+		function add_make_order(){
+			product_table.show();
+		}
 		
 		// quantity change button response
 		function quan_change_btn( currdata ){
