--- a/index.html
+++ b/index.html
@@ -344,11 +344,34 @@
 		}
 		
 		function del_make_order(){
-			$("#show_make_order").hide();
+			
 		}
 		
 		function add_make_order(){
-			$("#show_make_order").show();
+			$("#show_make_order").hide();
+			var cnt = document.getElementById( ele_id );
+			var div_first_obj = document.getElementById( "make_order" );
+			if( div_first_obj !== null ){
+				remove_bomtable_interface();
+			}
+			div_first_obj = document.createElement( "div" );
+			div_first_obj.id = "make_order"
+			div_first_obj.setAttribute("class", "tab_form");
+			cnt.appendChild(div_first_obj);
+			var div_second_obj = document.createElement( "div" );
+			div_second_obj.setAttribute("class", "text_field");
+			var serial_num = Date.now().toString(16).toUpperCase();
+			var data_str = '<label for="part_serial_num_out">制令號 : </label><input type=text id="part_serial_num_out" class="part_attr input_container normal_font" style="width:200px;margin-top:15px" name="part_make_order" disabled="true" value=serial_num >'
+			var data_str = '<label for="part_num_in">品號 : </label><input id="part_num_in" class="input_container part_list_style normal_font" name="part_num_list" list="part_list" onchange="update_bomtable_type( this.value, -1 )"/>';
+			div_second_obj.innerHTML = data_str;
+			div_first_obj.appendChild(div_second_obj);
+		}
+		
+		// Remove Make Order interface
+		function remove_bomtable_interface(){
+			var cnt = document.getElementById( ele_id );
+			var div_obj = document.getElementById( "make_order" );
+			cnt.removeChild(div_obj);
 		}
 		
 		// quantity change button response
@@ -577,7 +600,7 @@
 		// Init Bomtable interface
 		function init_bomtable_interface( ){
 			window.bom_node_array = [];
-			var cnt = document.getElementById( window.ele_id );
+			var cnt = document.getElementById( ele_id );
 			var div_first_obj = document.getElementById( "bom" );
 			if( div_first_obj !== null ){
 				remove_bomtable_interface();
