--- a/index.html
+++ b/index.html
@@ -230,17 +230,10 @@
 				</div>
 				<div id="menu7" class="tab-pane fade">
 					<ul class="nav flex-column">
-						<a data-toggle="tab" href="#add_make_order">新增</a>
-						<a data-toggle="tab" href="#search_make_order">查詢</a>
+						<a data-toggle="tab" href="#add_order">新增制令</a>
+						<a data-toggle="tab" href="#search_order">查詢制令</a>
 					</ul>
 					<div id="show_make_order">
-						<div id="event_toolbar">
-							<div class="col-auto">
-								<button type="button" class="btn btn-primary" onclick="del_make_order()" >刪除</button>
-								<button type="button" class="btn btn-primary" onclick="add_make_order()" >新增制令</button>
-								<button type="button" class="btn btn-primary" onclick="upd_make_order()" >更新數據</button>
-							</div>
-						</div>
 						<table id="event_table"
 							data-toolbar="#event_toolbar"
 							data-toggle="table"
@@ -333,21 +326,22 @@
 					default:
 				}
 			});
+			$('.flex-column a').click(function(){
+				$(this).tab('show');
+			});
+			
 		    $('.flex-column a').on('shown.bs.tab', function(event){
 				var x = $(event.target).text();   // active tab
 				switch(x){
-					case "新增":
+					case "新增制令":
 						add_make_order();	
 						break;
-					case "查詢":
+					case "查詢制令":
 						remove_bomtable_interface();
 						break;
 					default:
 				}
 			});
-			
-			
-			
 		});
 		
 		function index_response( val, row, ind ){
@@ -367,8 +361,8 @@
 		}
 		
 		function add_make_order(){
-			$("#show_make_order").hide();
-			var cnt = document.getElementById( ele_id );
+			alert('add');
+			/*var cnt = document.getElementById( ele_id );
 			var div_first_obj = document.getElementById( "make_order" );
 			if( div_first_obj !== null ){
 				remove_bomtable_interface();
@@ -383,14 +377,15 @@
 			var data_str = '<label for="part_serial_num_out">制令號 : </label><input type=text id="part_serial_num_out" class="part_attr input_container normal_font" style="width:200px;margin-top:15px" name="part_make_order" disabled="true" value=serial_num >'
 			var data_str += '<label for="part_num_in">品號 : </label><input id="part_num_in" class="input_container part_list_style normal_font" name="part_num_list" list="part_list" onchange="update_bomtable_type( this.value, -1 )"/>';
 			div_second_obj.innerHTML = data_str;
-			div_first_obj.appendChild(div_second_obj);
+			div_first_obj.appendChild(div_second_obj);*/
 		}
 		
 		// Remove Make Order interface
 		function remove_bomtable_interface(){
-			var cnt = document.getElementById( ele_id );
+			alert('init');
+			/*var cnt = document.getElementById( ele_id );
 			var div_obj = document.getElementById( "make_order" );
-			cnt.removeChild(div_obj);
+			cnt.removeChild(div_obj);*/
 		}
 		
 		// quantity change button response
