--- a/index.html
+++ b/index.html
@@ -365,9 +365,10 @@
 			var data_str += '<br><label for="part_num_in">品號 : </label><input id="part_num_in" class="input_container part_list_style normal_font" name="part_num_list" list="part_list"/>';
 			div_second_obj.innerHTML = data_str;
 			div_first_obj.appendChild(div_second_obj);
-			var data_str = '<button type="button" class="btn btn-primary" onclick="allow_make_order()" >確認</button>'
+			/*var data_str = '<button type="button" class="btn btn-primary" onclick="allow_make_order()" >確認</button>'
 			var data_str += '<button type="button" class="btn btn-primary" onclick="cancel_make_order()" >取消</button>';
 			div_first_obj.innerHTML = data_str;
+			cnt.appendChild( div_first_obj );*/
 		}
 		
 		// Remove Make Order interface
@@ -377,6 +378,13 @@
 			cnt.removeChild(div_obj);
 		}
 		
+		// Access Make Order 
+		function allow_make_order(){
+			cancel_make_order();
+		}
+		
+		
+		// Cancel Access Make Order 
 		function cancel_make_order(){
 			remove_make_order_interface();
 			$("show_make_order").show();
