--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 						ele_id = "menu6";
 						receive_record();
 						break;
-					case "事件":
+					case "制令查詢":
 						product_table = $("#event_table");
 						ele_id = "menu7";
 						receive_record();
