--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 		
 		function add_make_order(){
 			$("show_make_order").hide();
-			var cnt = document.getElementById( ele_id );
+			/*var cnt = document.getElementById( ele_id );
 			var div_first_obj = document.getElementById( "make_order" );
 			if( div_first_obj !== null ){
 				remove_make_order_interface();
@@ -364,7 +364,7 @@
 			var data_str = '<label for="part_serial_num_out">制令號 : </label><input type=text id="part_serial_num_out" class="part_attr input_container normal_font" style="width:200px;margin-top:15px" name="part_make_order" disabled="true" value=serial_num >'
 			var data_str += '<br><label for="part_num_in">品號 : </label><input id="part_num_in" class="input_container part_list_style normal_font" name="part_num_list" list="part_list"/>';
 			div_second_obj.innerHTML = data_str;
-			div_first_obj.appendChild(div_second_obj);
+			div_first_obj.appendChild(div_second_obj);*/
 			/*var data_str = '<button type="button" class="btn btn-primary" onclick="allow_make_order()" >確認</button>'
 			var data_str += '<button type="button" class="btn btn-primary" onclick="cancel_make_order()" >取消</button>';
 			div_first_obj.innerHTML = data_str;
