--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 							<button type="button" class="btn btn-primary" onclick="upd_make_order()" >更新數據</button>
 						</div>
 					</div>
-					<div id="show_make_order">
+					<div id='show_make_order'>
 						<table id="event_table"
 							data-toolbar="#make_order_toolbar"
 							data-toggle="table"
@@ -348,7 +348,7 @@
 		}
 		
 		function add_make_order(){
-			$("show_make_order").hide();
+			$('#show_make_order').hide();
 			/*var cnt = document.getElementById( ele_id );
 			var div_first_obj = document.getElementById( "make_order" );
 			if( div_first_obj !== null ){
