--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 		
 		function add_make_order(){
 			$('#show_make_order').hide();
-			/*var cnt = document.getElementById( ele_id );
+			var cnt = document.getElementById( ele_id );
 			var div_first_obj = document.getElementById( "make_order" );
 			if( div_first_obj !== null ){
 				remove_make_order_interface();
@@ -358,7 +358,7 @@
 			div_first_obj.id = "make_order"
 			div_first_obj.setAttribute("class", "tab_form");
 			cnt.appendChild(div_first_obj);
-			var div_second_obj = document.createElement( "div" );
+			/*var div_second_obj = document.createElement( "div" );
 			div_second_obj.setAttribute("class", "text_field");
 			var serial_num = Date.now().toString(16).toUpperCase();
 			var data_str = '<label for="part_serial_num_out">制令號 : </label><input type=text id="part_serial_num_out" class="part_attr input_container normal_font" style="width:200px;margin-top:15px" name="part_make_order" disabled="true" value=serial_num >'
