--- a/index.html
+++ b/index.html
@@ -365,10 +365,13 @@
 			data_str += '<br><label for="part_num_in">品號 : </label><input id="part_num_in" class="input_container part_list_style normal_font" name="part_num_list" list="part_list"/>';
 			div_second_obj.innerHTML = data_str;
 			div_first_obj.appendChild(div_second_obj);
+			
+			var div_second_obj = document.createElement( "div" );
+			div_second_obj.setAttribute("class", "text_field");
 			var data_str = '<button type="button" class="btn btn-primary" onclick="allow_make_order()" >確認</button>';
 			data_str += '<button type="button" class="btn btn-primary" onclick="cancel_make_order()" >取消</button>';
-			div_first_obj.innerHTML = data_str;
-			cnt.appendChild( div_first_obj );
+			div_second_obj.innerHTML = data_str;
+			div_first_obj.appendChild(div_second_obj);
 		}
 		
 		// Remove Make Order interface
